--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,14 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:  main 
+    branches:  [ main ] 
   pull_request:
-    branches:  main 
+    branches: [ main ]
   issues:
     types: [opened, edited, milestoned]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,7 +29,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-      - run: npm ci
+        run: npm ci
       - run: npm run build --if-present
       - run: npm test
         
